[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies=[
  'blspy == 2.0.2',
  'chia-blockchain == 2.0.1',
  'chia_rs == 0.2.10',
  'watchdog == 2.3.1',
]
name = "fusion-clsp"
version = "1.0.0.rc1"
authors = [
  { name="Tim Garrett", email="trg83@yahoo.com" },
]
description = "Fusion for Monkeyzoo Chialisp and Python Drivers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
  "clsp/*.*",
  "fusion/*.*",
  "README.md"
]
