cbuild-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies=[
  'blspy == 2.0.2',
  'chia-blockchain == 2.1.1',
  'chia_rs == 0.2.11',
  'watchdog == 2.3.1',
]
name = "fusion-clsp"
version = "1.0.0rc7"
authors = [
  { name="Tim Garrett", email="trg83@yahoo.com" },
]
description = "Fusion for Monkeyzoo Chialisp and Python Drivers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
  "clsp/*.*",
  "fusion/*.*",
  "README.md"
]
