[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies=[
  'blspy',
  'chia-blockchain == 2.3.0',
  'chia_rs'
]
name = "fusion-clsp"
version = "1.3.1"
authors = [
  { name="Tim Garrett", email="trg83@yahoo.com" },
]
description = "Fusion for Monkeyzoo Chialisp and Python Drivers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
  "clsp/*.*",
  "fusion/*.*",
  "README.md"
]
